--- a/hw-week-6.Rmd
+++ b/hw-week-6.Rmd
@@ -9,15 +9,15 @@ z.prop.test<-function(p1, p2 = NULL, n1, n2 = NULL, p0, alternative = "two.taile
   p<- rep(NA, k) 
   #p0 stands for population proportion, p1 is pop1, p2 is pop2
   for (i in 1:k) {
-    mu<- mean(x)
+    
     s<- sqrt((p0 * (1-p0))/n1)
-    z<- ((p1-p2)-0)/(sqrt((p0(1-p0)*((1/n1)+(1/n2)))))
+    z<- ((p1-p2)-0)/(sqrt((p0*(1-p0)*((1/n1)+(1/n2)))))
     z2<- ((p1-p0)/s)
     
   if (alternative == "less") {
       p[i]<- pnorm(z, lower.tail = TRUE)
       
-      if(p2 == NULL) {
+      if(is.null(p2)) {
       p[i] <- pnorm(z2) 
       }
   }
@@ -26,7 +26,7 @@ z.prop.test<-function(p1, p2 = NULL, n1, n2 = NULL, p0, alternative = "two.taile
       p[i] <- pnorm (z, lower.tail = FALSE)
       #or use p[i] <- pt(t, df = n-1, lower.tail = TRUE)
       
-      if(p2 == NULL) {
+      if(is.null(p2)) {
         p[i] <- pnorm(z2) 
       }
   }
@@ -39,11 +39,12 @@ z.prop.test<-function(p1, p2 = NULL, n1, n2 = NULL, p0, alternative = "two.taile
       if (z < 0)
        {
         p[i] <- 2 * pnorm(z, lower.tail = TRUE)
-       } 
-      if(p2 == NULL) {
+      } 
+    
+      if(is.null(p2)) {
         p[i] <- pnorm(z2) 
        }
-      if(n2 == NULL) {
+      if(is.null(n2)) {
         p[i] <- pnorm(z2)
       }
   }
@@ -58,11 +59,15 @@ z.prop.test<-function(p1, p2 = NULL, n1, n2 = NULL, p0, alternative = "two.taile
     #under this condition normality cannot be assumed
   }
   }
+  
+  return(list(z, p[i]))
 }
 ```
 
 ```{r}
+ztest1<-z.prop.test(3, 5, 30, 35, 4, alternative = "less", conf.level = 0.95, alpha = 0.05, k = 10000)
 
+```
 
 
 
