--- a/hw-week-6.Rmd
+++ b/hw-week-6.Rmd
@@ -9,7 +9,6 @@ z.prop.test<-function(p1, p2 = NULL, n1, n2 = NULL, p0, alternative = "two.taile
   p<- rep(NA, k) 
   #p0 stands for population proportion, p1 is pop1, p2 is pop2
   for (i in 1:k) {
-    
     s<- sqrt((p0 * (1-p0))/n1)
     z<- ((p1-p2)-0)/(sqrt((p0*(1-p0)*((1/n1)+(1/n2)))))
     z2<- ((p1-p0)/s)
@@ -58,9 +57,11 @@ z.prop.test<-function(p1, p2 = NULL, n1, n2 = NULL, p0, alternative = "two.taile
       warning("conditions not met")
     #under this condition normality cannot be assumed
   }
+  ci<-(p2-p1) + c(-1,1) * qnorm(0.975) * sqrt((p1*(1-p1)/n1)+(p2*(1-p2)/n2))
   }
   
-  return(list(z, p[i], ))
+  return(list(z, p[i], ci)) 
+  #i think this is right but I was very confused on how to get the confidence interval here 
 }
 ```
 
@@ -74,5 +75,8 @@ ztest1
 d<- "C:/Users/Audrey/Desktop/kamilar.csv"
 read.csv(d)
 ```
+
+```{r}
+library(ggplot2)
 
   
